--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-867.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-987.2KB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-536.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-232.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-318.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-949.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-526.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.23MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.43MB/s(Youtube:不良林), server: 85.208.108.94, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.54MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-551.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 台湾-1.98MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-442.1KB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-232.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
