--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-987.2KB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-2.17MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-431.1KB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇦 加拿大-867.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-1.98MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-442.1KB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-788.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-284.6KB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-405.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-225.6KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
+  - {name: 🇨🇳 中国-231.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-516.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-387.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-987.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-203.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-431.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-867.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-788.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-284.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1021.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-225.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
