--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-154.6KB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-1.93MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-392.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-160.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-262.8KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-821.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-325.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-610.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-431.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-480.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-821.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-160.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-262.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-734.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: hk-hkg-sh-hk-02-tr.cdn.savoy.click, port: 21089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-sh-hk-02-tr.cdn.savoy.click, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.80MB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.25MB/s(Youtube:不良林), server: 85.208.108.90, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林), server: 85.208.108.90, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-154.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-262.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-610.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
