--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: hk-hkg-sh-hk-02-tr.cdn.savoy.click, port: 21089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-sh-hk-02-tr.cdn.savoy.click, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-821.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-734.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-727.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-160.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-448.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-427.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 85.208.108.90, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林), server: 85.208.108.90, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-734.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-969.2KB/s(Youtube:不良林), server: gy01.v2boardclient.com, port: 30001, type: vmess, uuid: d34ccbe3-1468-48b7-b50d-9b5be3c1535f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gy01.v2boardclient.com}}
-  - {name: 🇨🇳 中国-313.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-212.4KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇳 中国-293.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-500.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-256.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 未知国家-353.7KB/s(Youtube:不良林), server: us-lax-ctg-01-tr.cdn.savoy.click, port: 889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: us-lax-ctg-01-tr.cdn.savoy.click, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-821.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-727.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-160.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-734.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-969.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-353.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
